--- a/FileMonitor/MainWindow.xaml
+++ b/FileMonitor/MainWindow.xaml
@@ -262,15 +262,36 @@
                                            FontSize="16"
                                            FontWeight="Bold"/>
                             </Border>
+                            
+                            <!-- Horizontal stack panel for button layout -->
+                            <StackPanel Orientation="Horizontal" 
+                                        HorizontalAlignment="Stretch"
+                                        VerticalAlignment="Top"
+                                        Height="25" 
+                                        Margin="10,53,0,10">
 
-                            <Button x:Name="AddBackupPath" 
-                                    Content="Add Path" 
-                                    Click="AddBackupPath_Click" 
-                                    HorizontalAlignment="Left" 
-                                    VerticalAlignment="Top"
-                                    Padding="3"
-                                    Height="25" 
-                                    Margin="10,53,0,10"/>
+                                <StackPanel.Resources>
+                                    <Style TargetType="{x:Type Button}">
+                                        <Setter Property="Margin" 
+                                                Value="0,0,10,0"/>
+                                        <Setter Property="Padding"
+                                                Value="3"/>
+                                    </Style>
+                                </StackPanel.Resources>
+
+                                <Button x:Name="AddBackupPath" 
+                                        Content="Add Path" 
+                                        Click="AddBackupPath_Click" />
+
+                                <Button x:Name="RemoveBackupPath" 
+                                        Content="Remove Backup Path(s)" 
+                                        Click="RemoveBackupPath_Click"
+                                        IsEnabled="{
+                                            Binding ElementName=BackupPathsDisplayed, 
+                                            Path=SelectedIndex, 
+                                            Converter={StaticResource 
+                                            IntToBoolValueConverter}}" />
+                            </StackPanel>
 
                             <ListView x:Name="BackupPathsDisplayed" 
                                         Margin="0,90,0,0"
