--- a/FileMonitor/MainWindow.xaml
+++ b/FileMonitor/MainWindow.xaml
@@ -8,7 +8,8 @@
         Title="FileMonitor" 
         MinHeight="600" 
         MinWidth="800" 
-        WindowState="Maximized" >
+        WindowState="Maximized" 
+        PreviewMouseDown="Window_PreviewMouseDown">
 
     <Window.Resources>
         <valueConverters:IntToBoolValueConverter x:Key="IntToBoolValueConverter" />
