--- a/FileMonitor/MainWindow.xaml
+++ b/FileMonitor/MainWindow.xaml
@@ -9,7 +9,7 @@
         MinHeight="600" 
         MinWidth="800" 
         WindowState="Maximized" 
-        PreviewMouseDown="Window_PreviewMouseDown">
+        MouseDown="Window_MouseDown">
 
     <Window.Resources>
         <valueConverters:IntToBoolValueConverter x:Key="IntToBoolValueConverter" />
@@ -339,53 +339,58 @@
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
                         
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        
                         <Border BorderBrush="Black" 
                                 BorderThickness=".5" 
-                                Grid.Column="0"
-                                Grid.Row="1">
-                            
-                            <Grid>
-                                <Border BorderBrush="Black" 
+                                Grid.Column="0" 
+                                Grid.RowSpan="2"/>
+
+                        <Grid>
+                            <Border BorderBrush="Black" 
                                         BorderThickness=".4" 
                                         Background="MediumPurple" 
                                         Padding="9" 
                                         HorizontalAlignment="Stretch"
                                         VerticalAlignment="Top">
-                                    
-                                    <TextBlock Text="User Settings:"
+
+                                <TextBlock Text="User Settings:"
                                                FontSize="16"
                                                FontWeight="Bold"/>
-                                </Border>
-                                <ScrollViewer
+                            </Border>
+                            <ScrollViewer
                                     VerticalScrollBarVisibility="Auto" 
                                     HorizontalScrollBarVisibility="Auto">
-                                    <StackPanel Orientation="Vertical"
+                                <StackPanel Orientation="Vertical"
                                             Grid.Column="0"
                                             Margin="10,53,0,10">
-                                            <StackPanel.Resources>
-                                                <Style TargetType="{x:Type CheckBox}">
-                                                    <Setter Property="Margin" Value="0,10,0,0"/>
-                                                </Style>
-                                            </StackPanel.Resources>
-                                        <CheckBox 
+                                    <StackPanel.Resources>
+                                        <Style TargetType="{x:Type CheckBox}">
+                                            <Setter Property="Margin" Value="0,10,0,0"/>
+                                        </Style>
+                                    </StackPanel.Resources>
+                                    <CheckBox 
                                             x:Name="OverwriteUpdatedFilesCheckBox" 
                                             Content="Overwrite updated files?" 
                                             IsChecked="{Binding Mode=TwoWay, Path=OverwriteUpdatedFiles}"
                                             Click="OverwriteUpdatedFilesCheckBox_Click"/>
-                                        <CheckBox 
+                                    <CheckBox 
                                             x:Name="IncludeAllSubfoldersCheckBox"  
                                             Content="Include all subfolders when monitoring a folder? (Choose per folder)"
                                             IsChecked="{Binding Mode=TwoWay, Path=IncludeAllSubfolders}"
                                             Click="IncludeAllSubfoldersCheckBox_Click"/>
-                                    </StackPanel>
-                                </ScrollViewer>                            
-                            </Grid>
-                        </Border>
-                        
-                    <Border BorderBrush="Black" 
+                                </StackPanel>
+                            </ScrollViewer>
+                        </Grid>
+
+
+                        <Border BorderBrush="Black" 
                             BorderThickness=".5" 
                             Grid.Column="1"
-                            Grid.Row="1">
+                            Grid.Row="0">
                         <Grid>
                             <Border BorderBrush="Black" 
                                     BorderThickness=".4" 
