--- a/FileMonitor/MainWindow.xaml
+++ b/FileMonitor/MainWindow.xaml
@@ -13,6 +13,19 @@
 
     <Window.Resources>
         <valueConverters:IntToBoolValueConverter x:Key="IntToBoolValueConverter" />
+        
+        <Style x:Key="MainBorderStyle" TargetType="Border">
+            <Setter Property="BorderBrush" Value="Black"/>
+            <Setter Property="BorderThickness" Value=".5" />
+        </Style>
+        
+        <Style x:Key="HeaderStyle" TargetType="Border">
+            <Setter Property="BorderBrush" Value="Black"/>
+            <Setter Property="BorderThickness" Value=".4" />
+            <Setter Property="Padding" Value="9" />
+            <Setter Property="HorizontalAlignment" Value="Stretch" />
+            <Setter Property="VerticalAlignment" Value="Top" />
+        </Style>
     </Window.Resources>
 
     <Grid>
@@ -32,18 +45,13 @@
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
 
-                    <Border BorderBrush="Black" 
-                            BorderThickness=".5" 
+                    <Border Style="{StaticResource MainBorderStyle}"
                             Grid.Column="0"
                             Grid.Row="0"
                             Grid.RowSpan="2">
                         <Grid>
-                            <Border BorderBrush="Black" 
-                                    BorderThickness=".4" 
-                                    Background="Aquamarine" 
-                                    Padding="9" 
-                                    HorizontalAlignment="Stretch"
-                                    VerticalAlignment="Top">
+                            <Border Style="{StaticResource HeaderStyle}"
+                                    Background="Aquamarine" >
 
                                 <TextBlock Text="Monitored Files:"
                                            FontSize="16"
@@ -112,18 +120,13 @@
                         </Grid>
                     </Border>
                     
-                    <Border BorderBrush="Black" 
-                            BorderThickness=".5" 
+                    <Border Style="{StaticResource MainBorderStyle}"
                             Grid.Column="1"
                             Grid.Row="0"
                             Grid.RowSpan="2">
                         <Grid>
-                            <Border BorderBrush="Black" 
-                                    BorderThickness=".4" 
-                                    Background="Aquamarine" 
-                                    Padding="9" 
-                                    HorizontalAlignment="Stretch"
-                                    VerticalAlignment="Top">
+                            <Border Style="{StaticResource HeaderStyle}"
+                                    Background="Aquamarine" >
 
                                 <TextBlock Text="Monitored Folders:"
                                            FontSize="16"
@@ -182,18 +185,13 @@
                         </Grid>
                     </Border>
 
-                    <Border BorderBrush="Black" 
-                            BorderThickness=".5" 
+                    <Border Style="{StaticResource MainBorderStyle}"
                             Grid.Column="2"
                             Grid.Row="0">
 
                         <Grid>
-                            <Border BorderBrush="Black" 
-                                    BorderThickness=".4" 
-                                    Background="Aquamarine" 
-                                    Padding="9" 
-                                    HorizontalAlignment="Stretch"
-                                    VerticalAlignment="Top">
+                            <Border Style="{StaticResource HeaderStyle}" 
+                                    Background="Aquamarine" >
 
                                 <TextBlock Text="Updated Files:"
                                            FontSize="16"
@@ -247,17 +245,12 @@
                         </Grid>
                     </Border>
 
-                    <Border BorderBrush="Black" 
-                            BorderThickness=".5" 
+                    <Border Style="{StaticResource MainBorderStyle}"
                             Grid.Column="2"
                             Grid.Row="1">
                         <Grid>
-                            <Border BorderBrush="Black" 
-                                    BorderThickness=".4" 
-                                    Background="Orange" 
-                                    Padding="9" 
-                                    HorizontalAlignment="Stretch"
-                                    VerticalAlignment="Top">
+                            <Border Style="{StaticResource HeaderStyle}"
+                                    Background="Orange" >
 
                                 <TextBlock Text="Backup Paths:"
                                            FontSize="16"
@@ -344,125 +337,110 @@
                             <RowDefinition Height="*" />
                         </Grid.RowDefinitions>
                         
-                        <Border BorderBrush="Black" 
-                                BorderThickness=".5" 
+                        <Border Style="{StaticResource MainBorderStyle}"
                                 Grid.Column="0" 
-                                Grid.RowSpan="2"/>
+                                Grid.RowSpan="2">
 
-                        <Grid>
-                            <Border BorderBrush="Black" 
-                                        BorderThickness=".4" 
-                                        Background="MediumPurple" 
-                                        Padding="9" 
-                                        HorizontalAlignment="Stretch"
-                                        VerticalAlignment="Top">
+                            <Grid>
+                                <Border Style="{StaticResource HeaderStyle}"
+                                        Background="MediumPurple" >
 
-                                <TextBlock Text="User Settings:"
+                                    <TextBlock Text="User Settings:"
+                                                FontSize="16"
+                                                FontWeight="Bold"/>
+                                </Border>
+                                <ScrollViewer
+                                        VerticalScrollBarVisibility="Auto" 
+                                        HorizontalScrollBarVisibility="Auto">
+                                    <StackPanel Orientation="Vertical"
+                                                Grid.Column="0"
+                                                Margin="10,53,0,10">
+                                        <StackPanel.Resources>
+                                            <Style TargetType="{x:Type CheckBox}">
+                                                <Setter Property="Margin" Value="0,10,0,0"/>
+                                            </Style>
+                                        </StackPanel.Resources>
+                                        <CheckBox 
+                                                x:Name="OverwriteUpdatedFilesCheckBox" 
+                                                Content="Overwrite updated files?" 
+                                                IsChecked="{Binding Mode=TwoWay, Path=OverwriteUpdatedFiles}"
+                                                Click="OverwriteUpdatedFilesCheckBox_Click"/>
+                                        <CheckBox 
+                                                x:Name="IncludeAllSubfoldersCheckBox"  
+                                                Content="Include all subfolders when monitoring a folder? (Choose per folder)"
+                                                IsChecked="{Binding Mode=TwoWay, Path=IncludeAllSubfolders}"
+                                                Click="IncludeAllSubfoldersCheckBox_Click"/>
+                                    </StackPanel>
+                                </ScrollViewer>
+                            </Grid>
+                        </Border>
+
+                        <Border Style="{StaticResource MainBorderStyle}"
+                                Grid.Column="1"
+                                Grid.Row="0">
+                            <Grid>
+                                <Border Style="{StaticResource HeaderStyle}"
+                                        Background="MediumPurple" >
+
+                                    <TextBlock Text="Moved, Deleted, or Renamed Files:"
                                                FontSize="16"
                                                FontWeight="Bold"/>
-                            </Border>
-                            <ScrollViewer
-                                    VerticalScrollBarVisibility="Auto" 
-                                    HorizontalScrollBarVisibility="Auto">
-                                <StackPanel Orientation="Vertical"
-                                            Grid.Column="0"
+                                </Border>
+                            
+                                <!-- Horizontal stack panel for button layout -->
+                                <StackPanel Orientation="Horizontal" 
+                                            HorizontalAlignment="Stretch"
+                                            VerticalAlignment="Top"
+                                            Height="25" 
                                             Margin="10,53,0,10">
+
                                     <StackPanel.Resources>
-                                        <Style TargetType="{x:Type CheckBox}">
-                                            <Setter Property="Margin" Value="0,10,0,0"/>
+                                        <Style TargetType="{x:Type Button}">
+                                            <Setter Property="Margin" 
+                                                    Value="0,0,10,0"/>
+                                            <Setter Property="Padding"
+                                                    Value="3"/>
                                         </Style>
                                     </StackPanel.Resources>
-                                    <CheckBox 
-                                            x:Name="OverwriteUpdatedFilesCheckBox" 
-                                            Content="Overwrite updated files?" 
-                                            IsChecked="{Binding Mode=TwoWay, Path=OverwriteUpdatedFiles}"
-                                            Click="OverwriteUpdatedFilesCheckBox_Click"/>
-                                    <CheckBox 
-                                            x:Name="IncludeAllSubfoldersCheckBox"  
-                                            Content="Include all subfolders when monitoring a folder? (Choose per folder)"
-                                            IsChecked="{Binding Mode=TwoWay, Path=IncludeAllSubfolders}"
-                                            Click="IncludeAllSubfoldersCheckBox_Click"/>
+
+                                    <Button x:Name="RemovePossibleDeletedPaths" 
+                                            Content="Remove"
+                                            Click="RemovePossibleDeletedPaths_Click"
+                                            IsEnabled="{
+                                                Binding ElementName=MovedOrRenamedFilesDisplayed, 
+                                                Path=SelectedIndex, 
+                                                Converter={StaticResource 
+                                                IntToBoolValueConverter}}" />
                                 </StackPanel>
-                            </ScrollViewer>
-                        </Grid>
-
-
-                        <Border BorderBrush="Black" 
-                            BorderThickness=".5" 
-                            Grid.Column="1"
-                            Grid.Row="0">
-                        <Grid>
-                            <Border BorderBrush="Black" 
-                                    BorderThickness=".4" 
-                                    Background="MediumPurple" 
-                                    Padding="9" 
-                                    HorizontalAlignment="Stretch"
-                                    VerticalAlignment="Top">
-
-                                <TextBlock Text="Moved, Deleted, or Renamed Files:"
-                                           FontSize="16"
-                                           FontWeight="Bold"/>
-                            </Border>
-                            
-                            <!-- Horizontal stack panel for button layout -->
-                            <StackPanel Orientation="Horizontal" 
-                                        HorizontalAlignment="Stretch"
-                                        VerticalAlignment="Top"
-                                        Height="25" 
-                                        Margin="10,53,0,10">
-
-                                <StackPanel.Resources>
-                                    <Style TargetType="{x:Type Button}">
-                                        <Setter Property="Margin" 
-                                                Value="0,0,10,0"/>
-                                        <Setter Property="Padding"
-                                                Value="3"/>
-                                    </Style>
-                                </StackPanel.Resources>
-
-                                <Button x:Name="RemovePossibleDeletedPaths" 
-                                        Content="Remove"
-                                        Click="RemovePossibleDeletedPaths_Click"
-                                        IsEnabled="{
-                                            Binding ElementName=MovedOrRenamedFilesDisplayed, 
-                                            Path=SelectedIndex, 
-                                            Converter={StaticResource 
-                                            IntToBoolValueConverter}}" />
-                            </StackPanel>
                            
-                            <ListView x:Name="MovedOrRenamedFilesDisplayed"  
-                                      Margin="0,90,0,0"
-                                      ItemsSource="{Binding MovedOrRenamedFiles}" 
-                                      HorizontalAlignment="Stretch"
-                                      VerticalAlignment="Stretch"
-                                      ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                                      ScrollViewer.VerticalScrollBarVisibility="Auto" >
+                                <ListView x:Name="MovedOrRenamedFilesDisplayed"  
+                                          Margin="0,90,0,0"
+                                          ItemsSource="{Binding MovedOrRenamedFiles}" 
+                                          HorizontalAlignment="Stretch"
+                                          VerticalAlignment="Stretch"
+                                          ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                                          ScrollViewer.VerticalScrollBarVisibility="Auto" >
 
-                                <ListView.View>
-                                    <GridView AllowsColumnReorder="False">
-                                        <GridView.ColumnHeaderContainerStyle>
-                                            <Style TargetType="{x:Type GridViewColumnHeader}">
-                                                <Setter Property="Visibility" Value="Collapsed" />
-                                            </Style>
-                                        </GridView.ColumnHeaderContainerStyle>
-                                        <GridViewColumn DisplayMemberBinding="{Binding Path}" Width="{Binding ActualWidth, ElementName=MovedOrRenamedFilesDisplayed}"/>
-                                    </GridView>
-                                </ListView.View>
-                            </ListView>
-                        </Grid>
-                    </Border>
+                                    <ListView.View>
+                                        <GridView AllowsColumnReorder="False">
+                                            <GridView.ColumnHeaderContainerStyle>
+                                                <Style TargetType="{x:Type GridViewColumnHeader}">
+                                                    <Setter Property="Visibility" Value="Collapsed" />
+                                                </Style>
+                                            </GridView.ColumnHeaderContainerStyle>
+                                            <GridViewColumn DisplayMemberBinding="{Binding Path}" Width="{Binding ActualWidth, ElementName=MovedOrRenamedFilesDisplayed}"/>
+                                        </GridView>
+                                    </ListView.View>
+                                </ListView>
+                            </Grid>
+                        </Border>
                         
-                        <Border BorderBrush="Black" 
-                                BorderThickness=".5" 
+                        <Border Style="{StaticResource MainBorderStyle}" 
                                 Grid.Column="1"
                                 Grid.Row="1">
                             <Grid>
-                                <Border BorderBrush="Black" 
-                                        BorderThickness=".4" 
-                                        Background="MediumPurple" 
-                                        Padding="9" 
-                                        HorizontalAlignment="Stretch"
-                                        VerticalAlignment="Top">
+                                <Border Style="{StaticResource HeaderStyle}"
+                                        Background="MediumPurple" >
 
                                     <TextBlock Text="Moved, Deleted, or Renamed Files:"
                                                FontSize="16"
@@ -513,6 +491,7 @@
                                             <GridViewColumn DisplayMemberBinding="{Binding Path}" Width="{Binding ActualWidth, ElementName=MovedOrRenamedBackupPaths}"/>
                                         </GridView>
                                     </ListView.View>
+                                    
                                 </ListView>
                             </Grid>
                         </Border>
